main/interfaces/Plush/templates/static/stylesheets/plush-default.css
body {
	background-color: #B1B1B1;
	font-family: arial, "lucida console", sans-serif;
}

select, input {
	border: 0px;
	background: #333;
	color: #FFF;
	display:inline;
}

ul, li, p, h1, h2, h3 { margin: 0; padding: 0; list-style: none; }

#new_release_notification {
	text-align: center;
}
#new_release_notification a {
	background-color: darkgreen;
	font-weight:bold;
	color:#FFF;
	text-decoration: none;
	border-bottom: 1px dashed #FFF;
	padding:4px;
}

#add_nzb_menu {
	text-align: center;
}

#add_nzb_menu span {
	padding:2px;
}
.add_nzb_box_fetch {
	background-color:lightyellow;
	border:1px solid #FFBC00;
}

.add_nzb_box_upload {
	background-color:lightyellow;
	border:1px solid #FFBC00;
}

.add_nzb_box_processing {
	background-color:lightyellow;
	border:1px solid #FFBC00;
}
#addID_input {
	text-align:right;
}
#addID {
	cursor:pointer;
}
#uploadNZBForm {
	display:inline;
}
#addNZBbyFile {
	cursor:pointer;
}
#refreshRate-option {
	font-size:100%;
	text-align: right;
}
#refreshRate-option option {
}
#onQueueFinish-option {
	margin-left:8px;
	width:140px;
	font-size:100%;
}
#sort_by_avg_age {
	cursor:pointer;
}
#sort_by_name {
	cursor:pointer;
}
#sort_by_size {
	cursor:pointer;
}
#queue_purge {
	cursor:pointer;
}
#help_irc {
	cursor:pointer;
}
#shutdown_sabnzbd {
	cursor:pointer;
}
#warning_message {
	text-align:center;
	background-color: red;
	color: white;
}




#stats_noofslots {
	display:none;
}





.box_fatbottom {
	background: url(../images/plush-default/qh_bottom.png) 0 0 repeat-x;
	height:37px;
	font-size: 66%;
	color: #606060;
	text-align:center;
}
.box_fatbottom div {
	padding:13px 10px 0 10px;
}
.box_fatbottom .left_stats {
	float:left;
	padding-left:40px;
}
.box_fatbottom .right_stats {
	float:right;
	padding-right:40px;
}
.box_fatbottom strong {
	color: #000;
}
.stats_incomplete_freespace {
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_incomplete.png) 0 50% no-repeat;
}
.stats_incomplete_freespace_needspace {
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_needspace.png) 0 50% no-repeat;
	color:red;
}
.stats_complete_freespace {
	margin-left:10px;
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_complete.png) 0 50% no-repeat;
}
.stats_complete_freespace_needspace {
	margin-left:10px;
	padding-top:8px;
	padding-bottom:8px;
	padding-left:20px;
	background: url(../images/plush-default/q_stats_needspace.png) 0 50% no-repeat;
	color:red;
}

.history_logo {
	background: url(../images/plush-default/sabnzbdplus_plush.png) 50% 100% no-repeat;
}

.box_banner_menu {
	float:right;
	list-style:none;
	display:inline;
	margin: 10px 0;
	padding: 0;
}
.box_banner_menu li {
	float:right;
}
.q_menu_pause {
	margin-right:6px;
	padding-right:32px;
	padding-bottom:24px;
	cursor:pointer;
}
.q_menu_unpaused {
	background: url(../images/plush-default/q_pause.png) 0 0 no-repeat;
}
.q_menu_paused {
	background: url(../images/plush-default/q_pause_on.png) 0 0 no-repeat;
}
.q_menu_sort {
	width:55px;
	height: 55px;
	cursor:pointer;
}
.q_menu_sort.show { background: url(../images/plush-default/q_pill_sort.png) 0 0 no-repeat;}
.q_menu_verbose,.h_menu_verbose {
	background: url(../images/plush-default/qh_verbosity.png) 0 100% no-repeat;
	margin-right:6px;
	padding-right:28px;
	padding-bottom:24px;
	cursor:pointer;
	display:none;
}
.q_menu_purge {
	background: url(../images/plush-default/h_purge.png) 0 0 no-repeat;
	padding-bottom:24px;
	margin-right:6px;
	padding-right:24px;
	cursor:pointer;
	display:none;
}
.q_menu_purge.show { display: inline; }
.h_menu_purge {
	background: url(../images/plush-default/h_purge.png) 0 100% no-repeat;
	margin-right:6px;
	padding-right:24px;
	padding-bottom:24px;
	cursor:pointer;
	display:none;
}
.h_menu_purge.show { display: inline; }
.queue_logo {
	background: url(../images/plush-default/sabnzbdplus_logo.png) 50% 50% no-repeat;
	padding-left:240px;
	padding-right:240px;
	padding-bottom:50px;
	width: 90px;
	height: 40px;
}

.queue_pill_l {display:inline; background: url(../images/plush-default/q_pill_l.png) 0 0 no-repeat;padding-left:9px;}
.queue_pill_m {display:inline; background: url(../images/plush-default/q_pill_m.png) 0 0 repeat-x; width:100px; }
.queue_pill_r {display:inline; background: url(../images/plush-default/q_pill_r.png) 100% 0 no-repeat; height:51px;}


.queueTable {
	border-collapse: seperate;
	width: 100%;
	background-color: #e0e0e0;
	color: #606060;
	border-bottom: 1px solid #fff;
	border-spacing: 0px;
}
.queueTable tr {
	background-color: #e0e0e0;
	
}
.queueTable tr:hover {
	background-color: #f9f9f9;
	color: #000;
}
.queueTable td {
	vertical-align: middle;
	padding:2px 0;
	border-top: 1px solid #fff;
}
.queueTable td.download-title { width: 50%; }
.queueTable .title {
	height: 14px;
	width: 16px;
	margin: 2px 8px 0 4px;
	float:left;
	background: url(../images/plush-default/ql_grip.png) 0 50% no-repeat;
}
.queueTable tr:hover .title {
	background: url(../images/plush-default/ql_grip_on.png) 0 50% no-repeat;
}
.queueTable .historyTitle { width: 16px; float:left; height: 16px; margin-right: 10px; margin-left: 3px; }
.queueTable .historyTitle.Loaded, .queueTable .historyTitle.Check, .queueTable .historyTitle.Cross { background-repeat: no-repeat; } 
.queueTable .historyTitle.Loaded {
	background-image: url(../images/plush-default/hl_loaded.gif);
}
.queueTable .historyTitle.Check {
	background-image: url(../images/plush-default/hv_ok.png);
}
.queueTable .historyTitle.Cross {
	background-image: url(../images/plush-default/hv_error.png);
}
.queueTable a {
	text-decoration: none;
	color: #606060;
}
.queueTable tr:hover a {
	color: #000;
}
.queueTable a:hover {
	border-bottom: 1px dotted #606060;
	cursor: pointer;
}
.queueTable .eta {
	padding-left:6px;
	text-align: center;
	font-size: 70%;
}
/* ... */

